Load lights from api

--- a/HomeControl.Common/HomeControl.Common.csproj
+++ b/HomeControl.Common/HomeControl.Common.csproj
@@ -5,7 +5,20 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Folder Include="Dtos" />
       <Folder Include="obj\Debug\netcoreapp3.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="obj\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="obj\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="obj\**" />
     </ItemGroup>
 
 </Project>
