--- a/HomeControl.Web/appsettings.json
+++ b/HomeControl.Web/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
       }
     },
-"AllowedHosts": "*"
+"AllowedHosts": "*",
+  "HueApi": {
+    "DiscoverUrl": "https://discovery.meethue.com",
+    "UserName": "37jkmbWO2SbtGLs3hx-Y614lH8s8Sv3pw70HsvFl"
+  }
 }
