--- a/HomeControl.Web/appsettings.json
+++ b/HomeControl.Web/appsettings.json
@@ -10,5 +10,8 @@
   "HueApi": {
     "DiscoverUrl": "https://discovery.meethue.com",
     "UserName": "37jkmbWO2SbtGLs3hx-Y614lH8s8Sv3pw70HsvFl"
+  },
+  "ConnectionStrings": {
+    "HomeControl": "Server=DESKTOP-BA6TV24\\SQLEXPRESS;Database=homecontrol;User Id=homecontrol;Password=46829627;Trusted_Connection=True;MultipleActiveResultSets=true;"
   }
 }
