--- a/HomeControl.Web/HomeControl.Web.csproj
+++ b/HomeControl.Web/HomeControl.Web.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.5" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HomeControl.DataAccess\HomeControl.DataAccess.csproj" />
     <ProjectReference Include="..\HomeControl.Service\HomeControl.Service.csproj" />
   </ItemGroup>
 
